[gd_scene load_steps=27 format=3 uid="uid://b5a11mk33blff"]

[ext_resource type="Script" path="res://level/landing_area.gd" id="1_pqecu"]
[ext_resource type="PackedScene" uid="uid://de6gvwitue5l6" path="res://scenery/pillar_right.tscn" id="2_o6idt"]
[ext_resource type="PackedScene" uid="uid://mcsx6sq7gnr4" path="res://scenery/pillar_left.tscn" id="3_g7f7i"]
[ext_resource type="PackedScene" uid="uid://bvlm3rcsexwsv" path="res://scenery/noise_controller.tscn" id="4_bfn4u"]
[ext_resource type="PackedScene" uid="uid://cnl38phwlp83e" path="res://scenery/plane_landed.tscn" id="5_mrpp6"]
[ext_resource type="Texture2D" uid="uid://b1dwsb0ttb2w4" path="res://scenery/pillar.tres" id="6_6nbwv"]
[ext_resource type="PackedScene" uid="uid://boyymyyb3pxi2" path="res://jet_boots.tscn" id="7_g0rdt"]
[ext_resource type="Theme" uid="uid://c5ff8onaq0p3m" path="res://text.tres" id="8_tqll2"]

[sub_resource type="Gradient" id="Gradient_wj1jn"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_sq873"]
gradient = SubResource("Gradient_wj1jn")

[sub_resource type="FastNoiseLite" id="FastNoiseLite_n0lpp"]
noise_type = 3
frequency = 0.0073
offset = Vector3(-5.9, 0, 0)

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_3wl1e"]
width = 2000
height = 1000
noise = SubResource("FastNoiseLite_n0lpp")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0ijjg"]
normal = Vector2(1, 0)

[sub_resource type="Gradient" id="Gradient_6j8i5"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oy56j"]
gradient = SubResource("Gradient_6j8i5")

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_0rc5n"]

[sub_resource type="Gradient" id="Gradient_oufid"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u22sb"]
gradient = SubResource("Gradient_oufid")

[sub_resource type="Gradient" id="Gradient_lcopn"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_cfonu"]
gradient = SubResource("Gradient_lcopn")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_php0u"]
size = Vector2(64, 63.9196)

[sub_resource type="Gradient" id="Gradient_ux01m"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_k3471"]
gradient = SubResource("Gradient_ux01m")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fs3dv"]
size = Vector2(64.0577, 63.9257)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ugnv7"]
size = Vector2(112, 294)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d7drw"]
size = Vector2(486, 42.5)

[node name="LandingArea" type="Node2D"]
script = ExtResource("1_pqecu")

[node name="Sky" type="Sprite2D" parent="."]
visible = false
scale = Vector2(75.2422, 9542)
texture = SubResource("GradientTexture1D_sq873")

[node name="Parallax2D" type="Parallax2D" parent="."]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(4000, 2000)
autoscroll = Vector2(4, -2)
repeat_times = 4
metadata/_edit_lock_ = true

[node name="TextureRect" type="TextureRect" parent="Parallax2D"]
z_index = -10
offset_right = 2000.0
offset_bottom = 1000.0
texture = SubResource("NoiseTexture2D_3wl1e")
metadata/_edit_lock_ = true

[node name="TextureRect2" type="TextureRect" parent="Parallax2D"]
z_index = -10
offset_right = 2000.0
offset_bottom = 1000.0
scale = Vector2(-1, 1)
texture = SubResource("NoiseTexture2D_3wl1e")
metadata/_edit_lock_ = true

[node name="TextureRect3" type="TextureRect" parent="Parallax2D"]
z_index = -10
offset_right = 2000.0
offset_bottom = 1000.0
scale = Vector2(1, -1)
texture = SubResource("NoiseTexture2D_3wl1e")
metadata/_edit_lock_ = true

[node name="TextureRect4" type="TextureRect" parent="Parallax2D"]
z_index = -10
offset_right = 2000.0
offset_bottom = 1000.0
scale = Vector2(-1, -1)
texture = SubResource("NoiseTexture2D_3wl1e")
metadata/_edit_lock_ = true

[node name="Pillars" type="Node2D" parent="."]

[node name="Back" type="Node2D" parent="Pillars"]

[node name="PillarRight4" parent="Pillars/Back" instance=ExtResource("2_o6idt")]
position = Vector2(-839, -282)

[node name="PillarRight5" parent="Pillars/Back" instance=ExtResource("2_o6idt")]
position = Vector2(482, -267)

[node name="PillarRight6" parent="Pillars/Back" instance=ExtResource("2_o6idt")]
position = Vector2(1798, -92)

[node name="Front" type="Node2D" parent="Pillars"]
z_index = 50

[node name="PillarLeft4" parent="Pillars/Front" instance=ExtResource("3_g7f7i")]
position = Vector2(-532, -426)

[node name="PillarLeft5" parent="Pillars/Front" instance=ExtResource("3_g7f7i")]
position = Vector2(763, -427)

[node name="PillarLeft6" parent="Pillars/Front" instance=ExtResource("3_g7f7i")]
position = Vector2(2053, -201)

[node name="NoiseController" parent="Pillars" instance=ExtResource("4_bfn4u")]
position = Vector2(1, 1)

[node name="Borders" type="Node2D" parent="."]
position = Vector2(-1432, 0)

[node name="WorldBorder" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/WorldBorder"]
shape = SubResource("WorldBoundaryShape2D_0ijjg")

[node name="ColorRect" type="Sprite2D" parent="Borders/WorldBorder"]
position = Vector2(-4106, -2420.5)
scale = Vector2(32.0781, 4841)
texture = SubResource("GradientTexture1D_oy56j")

[node name="FloorCollision" type="StaticBody2D" parent="Borders"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/FloorCollision"]
shape = SubResource("WorldBoundaryShape2D_0rc5n")

[node name="Floor" type="Sprite2D" parent="Borders/FloorCollision"]
z_index = 70
position = Vector2(6842, 1380)
scale = Vector2(117.617, 2760)
texture = SubResource("GradientTexture1D_u22sb")
metadata/_edit_lock_ = true

[node name="Platform" parent="." instance=ExtResource("3_g7f7i")]
z_index = 5
position = Vector2(0, -7)
rotation = 1.57079
scale = Vector2(0.300101, 0.957763)

[node name="StaticBody2D" type="StaticBody2D" parent="Platform"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platform/StaticBody2D"]
position = Vector2(23.3255, 1.62346e-05)
rotation = -1.57079
scale = Vector2(1.0441, 3.33221)
polygon = PackedVector2Array(-267, 0, -238, -16, 237, -15, 258, 0)

[node name="SpawnPlatform" type="Node2D" parent="Platform"]
unique_name_in_owner = true
position = Vector2(-249.903, -656.739)

[node name="Obstacles" type="Node2D" parent="."]
z_index = 70
position = Vector2(3793.74, -85)

[node name="Sprite2D" type="Sprite2D" parent="Obstacles"]
position = Vector2(-837.743, 41)
scale = Vector2(7, 1.5)
texture = SubResource("GradientTexture2D_cfonu")

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Sprite2D"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sprite2D/StaticBody2D"]
position = Vector2(0, 0.0401764)
shape = SubResource("RectangleShape2D_php0u")

[node name="Sprite2D2" type="Sprite2D" parent="Obstacles"]
position = Vector2(-60.7427, 13)
scale = Vector2(10.5, 2.25)
texture = SubResource("GradientTexture2D_cfonu")

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Sprite2D2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sprite2D2/StaticBody2D"]
position = Vector2(0, 0.0401764)
shape = SubResource("RectangleShape2D_php0u")

[node name="Sprite2D3" type="Sprite2D" parent="Obstacles"]
position = Vector2(1088.26, -21)
scale = Vector2(15.75, 3.375)
texture = SubResource("GradientTexture2D_cfonu")

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Sprite2D3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sprite2D3/StaticBody2D"]
position = Vector2(0, 0.0401764)
shape = SubResource("RectangleShape2D_php0u")

[node name="Sprite2D4" type="Sprite2D" parent="Obstacles"]
position = Vector2(1757.26, 62)
rotation = 0.261799
scale = Vector2(2.81191, 1.45139)
texture = SubResource("GradientTexture2D_k3471")

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Sprite2D4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sprite2D4/StaticBody2D"]
position = Vector2(0.0463867, 0.332703)
shape = SubResource("RectangleShape2D_fs3dv")

[node name="Sprite2D5" type="Sprite2D" parent="Obstacles"]
position = Vector2(2827.26, -74.8044)
rotation = 0.00120123
scale = Vector2(23.625, 5.05689)
texture = SubResource("GradientTexture2D_cfonu")

[node name="StaticBody2D" type="StaticBody2D" parent="Obstacles/Sprite2D5"]
position = Vector2(-3.05176e-05, -0.0386734)
scale = Vector2(1, 1.00121)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obstacles/Sprite2D5/StaticBody2D"]
position = Vector2(3.05176e-05, 0.0401764)
shape = SubResource("RectangleShape2D_php0u")

[node name="Plane" parent="." instance=ExtResource("5_mrpp6")]
position = Vector2(88, -13)
scale = Vector2(2, 2)

[node name="Ruin" type="Node2D" parent="."]

[node name="RuinFront" type="Polygon2D" parent="Ruin"]
z_index = 70
position = Vector2(-1432, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(12532, -4467, 12500, -3110, 11596, -4001, 11603, -2607, 10732, -2977, 11116, -1963, 10286, -2154, 10726, -1387, 10039, -1500, 10477, -757, 9974, -775, 10273, -289, 10273, 2, 14217, 9, 14217, -3590, 13915, -4728, 13406, -3610)

[node name="RuinBack" type="Polygon2D" parent="Ruin"]
position = Vector2(-1432, 0)
color = Color(0, 0, 0, 1)
polygon = PackedVector2Array(12347, -3617, 12035, -3020, 11448, -2917, 11329, -2395, 10889, -2213, 10986, -1695, 10468, -1538, 10656, -1061, 10208, -913, 10430, -572, 10056, -464, 10273, -289, 10274, 2, 14217, 9, 14217, -3590, 13300, -3989, 12952, -3536)

[node name="SpawnRuin" type="Node2D" parent="Ruin"]
unique_name_in_owner = true
position = Vector2(8933, -65)
scale = Vector2(0.708324, 0.566406)

[node name="Collision" type="StaticBody2D" parent="Ruin"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Ruin/Collision"]
z_index = 70
position = Vector2(-1432, 0)
polygon = PackedVector2Array(12532, -4467, 12500, -3110, 11596, -4001, 11603, -2607, 10732, -2977, 11116, -1963, 10286, -2154, 10726, -1387, 10039, -1500, 10477, -757, 9974, -775, 10273, -289, 11653, -290, 11654, 1, 14217, 9, 14217, -3590, 13915, -4728, 13406, -3610)

[node name="Entrance" type="Area2D" parent="Ruin"]
position = Vector2(9105, -144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ruin/Entrance"]
z_index = 200
position = Vector2(4, -2)
shape = SubResource("RectangleShape2D_ugnv7")

[node name="Pillars" type="Node2D" parent="Ruin"]

[node name="Sprite2D" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(8861, -144)
scale = Vector2(0.708324, 0.566406)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D2" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(8984, -202)
scale = Vector2(1.062, 0.849)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D3" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(9175, -293)
scale = Vector2(1.593, 1.274)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D4" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(9486, -409)
scale = Vector2(2.39, 1.911)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D5" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(9950, -537)
scale = Vector2(3.585, 2.867)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D6" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(10792, -774)
scale = Vector2(5.378, 4.301)
texture = ExtResource("6_6nbwv")

[node name="Sprite2D7" type="Sprite2D" parent="Ruin/Pillars"]
z_index = 70
position = Vector2(12038, -1146)
scale = Vector2(8.067, 6.452)
texture = ExtResource("6_6nbwv")

[node name="Polygon2D" type="Polygon2D" parent="."]

[node name="JetBoots" parent="." instance=ExtResource("7_g0rdt")]
position = Vector2(-208, -351)

[node name="Hints" type="Node2D" parent="."]

[node name="Run" type="Area2D" parent="Hints"]
position = Vector2(4224, -17)

[node name="Run" type="Label" parent="Hints/Run"]
unique_name_in_owner = true
offset_left = -73.0
offset_top = -272.0
offset_right = 74.0
offset_bottom = -249.0
theme = ExtResource("8_tqll2")
text = "Press \"Shift\" to run"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hints/Run"]
position = Vector2(0, 1.25)
shape = SubResource("RectangleShape2D_d7drw")

[node name="JetBoots" type="Area2D" parent="Hints"]
position = Vector2(5628, -29)

[node name="JetBoots" type="Label" parent="Hints/JetBoots"]
unique_name_in_owner = true
offset_left = -166.0
offset_top = -236.0
offset_right = 157.0
offset_bottom = -213.0
theme = ExtResource("8_tqll2")
text = "Looks like I forgot my boots on Vulture"
horizontal_alignment = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hints/JetBoots"]
position = Vector2(0, 12.5)
shape = SubResource("RectangleShape2D_d7drw")

[connection signal="body_entered" from="Ruin/Entrance" to="." method="_on_entrance_body_entered"]
[connection signal="body_entered" from="Hints/Run" to="." method="_on_run_body_entered"]
[connection signal="body_exited" from="Hints/Run" to="." method="_on_run_body_exited"]
[connection signal="body_entered" from="Hints/JetBoots" to="." method="_on_jet_boots_body_entered"]
[connection signal="body_exited" from="Hints/JetBoots" to="." method="_on_jet_boots_body_exited"]
